# python-hexagonal-study

./: .pre-commit-config.yaml  README.md
hexagonal/: .env.example  alembic.ini  pyproject.toml
hexagonal/app/adapters/inbound/rest/: main.py
hexagonal/app/adapters/inbound/rest/dependencies/: core.py
hexagonal/app/adapters/inbound/rest/v1/: students.py
hexagonal/app/adapters/inbound/rest/v1/models/: __init__.py  student.py
hexagonal/app/adapters/outbound/orm/: session_manager.py
hexagonal/app/adapters/outbound/orm/models/: __init__.py  base_model.py  student.py
hexagonal/app/adapters/outbound/repositories/: __init__.py  student.py
hexagonal/app/configs/: dependency_injection.py  settings.py
hexagonal/app/domain/: exceptions.py
hexagonal/app/domain/models/: __init__.py  student.py
hexagonal/app/domain/ports/repositories/: __init__.py  student.py
hexagonal/app/use_cases/: __init__.py  student.py
hexagonal/infrastructure/: run_dev.py
hexagonal/infrastructure/alembic/: env.py
hexagonal/infrastructure/alembic/versions/: 6190b3b6be7b_create_students_table.py
